Features users connected

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Jellyfin",
+    "name": "KrosMovie",
     "description": "The Free Software Media System",
-    "lang": "en-US",
-    "short_name": "Jellyfin",
+    "lang": "fr-FR",
+    "short_name": "KrosMovie",
     "start_url": "index.html#!/home.html",
     "theme_color": "#101010",
     "background_color": "#101010",
