--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "@fontsource/noto-sans-kr": "4.5.12",
     "@fontsource/noto-sans-sc": "4.5.12",
     "@fontsource/noto-sans-tc": "4.5.12",
-    "@jellyfin/libass-wasm": "4.1.1",
     "@jellyfin/sdk": "unstable",
     "@loadable/component": "5.15.3",
     "blurhash": "2.0.4",
@@ -91,6 +90,7 @@
     "history": "5.3.0",
     "hls.js": "0.14.17",
     "intersection-observer": "0.12.2",
+    "jassub": "1.4.0",
     "jellyfin-apiclient": "1.10.0",
     "jquery": "3.6.3",
     "jstree": "3.3.14",
